--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "convertstudio",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
+  "packageManager": "npm@10.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "firebase": "^12.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11",
-    "uuid": "^11.1.0"
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "typecheck": "turbo run typecheck",
+    "test": "turbo run test",
+    "deploy:functions": "turbo run deploy --filter=functions",
+    "deploy:web": "turbo run deploy --filter=web",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "setup": "npm install && npm run build",
+    "verify": "node tools/scripts/verify-monorepo.js"
   },
   "devDependencies": {
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react-swc": "^3.10.2",
-    "typescript": "~5.8.3",
-    "vite": "^7.0.4"
+    "turbo": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
