--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -3,10 +3,11 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
+    "typecheck": "tsc --noEmit",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions --config ../config/firebase.json",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -14,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "shared": "*",
     "@types/pdf-parse": "^1.1.5",
     "docx": "^9.5.1",
     "file-type": "^21.0.0",
