--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "22"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
     "shared": "*",
     "@types/pdf-parse": "^1.1.5",
