--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,20 +11,26 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
-    "shared": "*",
     "@tailwindcss/vite": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^12.0.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "shared": "*",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   }
